k8s/catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-api
  namespace: eshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog-api

  template:
    metadata:
      labels:
        app: catalog-api

    spec:
      containers:
        - name: catalog-api
          image: pavankumarch1219/catalog-api:latest

          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 15
