k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-app
  namespace: eshop
  labels:
    app: dotnet-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: dotnet-app

  template:
    metadata:
      labels:
        app: dotnet-app

    spec:
      containers:
        - name: dotnet-app
          image: pavankumarch1219/dotnet-application:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
