k8s/identity-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-api
  namespace: eshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: identity-api

  template:
    metadata:
      labels:
        app: identity-api

    spec:
      containers:
        - name: identity-api
          image: pavankumarch1219/identity-api:latest

          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 15
