k8s/ordering-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordering-api
  namespace: eshop
  labels:
    app: ordering-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ordering-api

  template:
    metadata:
      labels:
        app: ordering-api

    spec:
      containers:
        - name: ordering-api
          image: pavankumarch1219/ordering-api:1.0.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
