k8s/basket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basket-service
  namespace: eshop
  labels:
    app: basket-api

spec:
  type: ClusterIP

  selector:
    app: basket-api

  ports:
    - name: http
      port: 80
      targetPort: 80
