k8s/dotnet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-app
  namespace: eshop

spec:
  type: NodePort   # 🔥 changed

  selector:
    app: dotnet-app

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007   # 🔥 external port
