k8s/identity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: eshop
  labels:
    app: identity-api

spec:
  type: ClusterIP

  selector:
    app: identity-api

  ports:
    - name: http
      port: 80
      targetPort: 80
