k8s/ordering-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ordering-service
spec:
  selector:
    app: ordering-api
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
