k8s/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: eshop
spec:
  selector:
    app: rabbitmq
  ports:
    - port: 5672
    - port: 15672
