k8s/redis-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: eshop

spec:
  type: ClusterIP
  selector:
    app: redis

  ports:
    - port: 6379
      targetPort: 6379

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: eshop

spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - name: redis
          image: redis:7-alpine

          ports:
            - containerPort: 6379

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"

          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 10

          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5

          volumeMounts:
            - name: redis-data
              mountPath: /data

      volumes:
        - name: redis-data
          emptyDir: {}
