k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: dotnet-app

spec:
  type: NodePort

  selector:
    app: dotnet-app

  ports:
  - port: 80
    targetPort: 8080
    nodePort: 32289
